qa/lint/cppcheck.log
mån  8 jan 2024 20:20:44 CET
Checking ../../src/application/application.cpp ...
../../src/application/objects/power_up.hpp:7:10: warning: Member variable 'object::alloc_ptr' is not initialized in the constructor. Maybe it should be initialized directly in the class object? [uninitDerivedMemberVar]
  inline power_up() {
         ^
../../src/application/objects/asteroid_small.hpp:12:10: warning: Member variable 'object::alloc_ptr' is not initialized in the constructor. Maybe it should be initialized directly in the class object? [uninitDerivedMemberVar]
  inline asteroid_small() {
         ^
../../src/application/objects/asteroid_medium.hpp:14:10: warning: Member variable 'object::alloc_ptr' is not initialized in the constructor. Maybe it should be initialized directly in the class object? [uninitDerivedMemberVar]
  inline asteroid_medium() {
         ^
../../src/application/objects/asteroid_large.hpp:14:10: warning: Member variable 'object::alloc_ptr' is not initialized in the constructor. Maybe it should be initialized directly in the class object? [uninitDerivedMemberVar]
  inline asteroid_large() {
         ^
../../src/application/objects/fragment.hpp:9:10: warning: Member variable 'object::alloc_ptr' is not initialized in the constructor. Maybe it should be initialized directly in the class object? [uninitDerivedMemberVar]
  inline fragment() {
         ^
../../src/application/objects/bullet.hpp:9:10: warning: Member variable 'object::alloc_ptr' is not initialized in the constructor. Maybe it should be initialized directly in the class object? [uninitDerivedMemberVar]
  inline bullet() {
         ^
../../src/application/objects/ship.hpp:9:10: warning: Member variable 'object::alloc_ptr' is not initialized in the constructor. Maybe it should be initialized directly in the class object? [uninitDerivedMemberVar]
  inline ship() {
         ^
../../src/engine/o1store.hpp:41:7: warning: %u in format string (no. 3) requires 'unsigned int' but the argument type is 'signed int'. [invalidPrintfArgType_uint]
      fprintf(stderr, "\n%s:%d: store %u: cannot allocate arrays\n", __FILE__,
      ^
../../src/engine/o1store.hpp:101:9: warning: %u in format string (no. 3) requires 'unsigned int' but the argument type is 'signed int'. [invalidPrintfArgType_uint]
        fprintf(stderr, "\n%s:%d: store %u: free overrun\n", __FILE__, __LINE__,
        ^
../../src/engine/o1store.hpp:111:11: warning: %u in format string (no. 3) requires 'unsigned int' but the argument type is 'signed int'. [invalidPrintfArgType_uint]
          fprintf(stderr, "\n%s:%d: store %u: double free\n", __FILE__,
          ^
../../src/engine/net.hpp:68:22: style: C-style pointer casting [cstyleCast]
    if (connect(fd, (struct sockaddr *)&server, sizeof(server)) < 0) {
                     ^
../../src/engine/net_server.hpp:44:26: style: C-style pointer casting [cstyleCast]
    if (bind(server_fd, (struct sockaddr *)&server, sizeof(server))) {
                         ^
../../src/engine/shader.hpp:180:0: style: C-style pointer casting [cstyleCast]
    char const *str = (char const *)glGetString(gl_str);
^
../../src/engine/hud.hpp:55:27: style: C-style pointer casting [cstyleCast]
                          (GLvoid *)(2 * sizeof(float)));
                          ^
../../src/engine/glob.hpp:253:27: style: C-style pointer casting [cstyleCast]
                          (GLvoid *)(3 * sizeof(float)));
                          ^
../../src/engine/glob.hpp:220:23: style: Consider using std::accumulate algorithm instead of a raw loop. [useStlAlgorithm]
      triangles_count += unsigned(r.vertex_count / 3);
                      ^
../../src/engine/glob.hpp:355:22: style: Consider using std::copy_if algorithm instead of a raw loop. [useStlAlgorithm]
        planes_points.emplace_back(pt);
                     ^
../../src/application/utils.hpp:61:13: error: Uninitialized variable: pu [legacyUninitvar]
  power_up *pu = new (objects.alloc()) power_up{};
            ^
../../src/application/objects/ship.hpp:111:15: error: Uninitialized variable: blt [legacyUninitvar]
      bullet *blt = new (objects.alloc()) bullet{};
              ^
../../src/application/objects/ship.hpp:120:17: error: Uninitialized variable: blt [legacyUninitvar]
        bullet *blt = new (objects.alloc()) bullet{};
                ^
../../src/application/application.cpp:84:13: error: Uninitialized variable: p1 [legacyUninitvar]
      ship *p1 = new (objects.alloc()) ship{};
            ^
../../src/application/application.cpp:88:13: error: Uninitialized variable: p2 [legacyUninitvar]
      ship *p2 = new (objects.alloc()) ship{};
            ^
../../src/application/application.cpp:93:13: error: Uninitialized variable: o [legacyUninitvar]
      ship *o = new (objects.alloc()) ship{};
            ^
../../src/application/appliwwcation.cpp:138:11: error: Uninitialized variable: o [legacyUninitvar]
    auto *o = new (objects.alloc()) asteroid_large{};
          ^
../../src/application/utils.hpp:61:13: style: Variable 'pu' is assigned a value that is never used. [unreadVariable]
  power_up *pu = new (objects.alloc()) power_up{};
            ^
../../src/application/application.cpp:84:13: style: Variable 'p1' is assigned a value that is never used. [unreadVariable]
      ship *p1 = new (objects.alloc()) ship{};
            ^
../../src/application/application.cpp:88:13: style: Variable 'p2' is assigned a value that is never used. [unreadVariable]
      ship *p2 = new (objects.alloc()) ship{};
            ^
../../src/application/application.cpp:93:13: style: Variable 'o' is assigned a value that is never used. [unreadVariable]
      ship *o = new (objects.alloc()) ship{};
            ^
../../src/application/application.cpp:138:11: style: Variable 'o' is assigned a value that is never used. [unreadVariable]
    auto *o = new (objects.alloc()) asteroid_large{};
          ^
1/2 files checked 89% done
Checking ../../src/main.cpp ...
2/2 files checked 100% done
